Fixed dropdown menu z-index

--- a/public/style.css
+++ b/public/style.css
@@ -193,12 +193,13 @@ i {
 
 .hw-nav ul li a {
   display: block;
-  padding: 0px 10px 20px 15px;
+  padding: 0px 10px 0px 15px;
   color: #666;
   text-decoration: none; }
 
 /* second level navigation styles */
 .hw-nav ul ul {
+  z-index: 2;
   background-color: #f1f4f5;
   border-radius: 0px;
   padding: 0;
@@ -214,6 +215,7 @@ i {
   width: 270px; }
 
 .hw-nav ul ul li a {
+  line-height: normal;
   padding: 14px 0px 14px 10px; }
 
 .hw-nav ul ul li a:hover {
